# Argus

./: .gitignore  .gitmodules  CMakeLists.txt
Argus/FastTest/: Hal.py
Argus/FastTest/examples/: Momentum.ipynb
Argus/FastTest/lib/: FastTest.cp310-win_amd64.pyd
Argus/FastTest/tests/: helpers.py  test_asset.py  test_backtrader.py  test_exchange.py  test_hal.py  test_lib.py  test_portfolio.py  test_strategy.py
Argus/FastTest/tests/data/: SPY_DAILY.csv
include/: account.h  asset.h  broker.h  containers.h  exchange.h  hydra.h  order.h  pch.h  portfolio.h  position.h  settings.h  strategy.h  tracers.h  trade.h  utils_array.h  utils_gmp.h  utils_string.h
src/: account.cpp  asset.cpp  broker.cpp  exchange.cpp  hydra.cpp  main.cpp  order.cpp  portfolio.cpp  position.cpp  tracers.cpp  trade.cpp
